<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/details_author_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/blue_text"
        android:orientation="vertical">

        <TextView
            android:id="@+id/back_button"
            style="@style/regular_text_view.small"
            android:drawableStart="@drawable/baseline_navigate_before_black_24"
            android:drawableTint="@color/white"
            android:text="@string/back_nav"
            android:textColor="@color/white" />


        <TextView
            style="@style/regular_text_view.large"
            android:layout_above="@+id/repo_author"
            android:layout_marginHorizontal="@dimen/margins_large"
            android:text="@string/author_inrtoduction" />

        <TextView
            android:id="@+id/repo_author"
            style="@style/header_text_view.medium"
            android:layout_above="@+id/repo_stars"
            android:layout_marginHorizontal="@dimen/margins_large"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:textColor="@color/white"
            tools:text="Repo author name" />

        <TextView
            android:id="@+id/repo_stars"
            style="@style/regular_text_view.small"
            android:layout_alignParentBottom="true"
            android:drawableStart="@drawable/baseline_star_border_black_24"
            android:drawableTint="@color/grey_text"
            android:text="@string/stars" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margins"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                style="@style/header_text_view.small"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                tools:text="Repo title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_online_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_background"
                android:text="@string/view_online_button"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            style="@style/header_text_view.medium"
            android:text="@string/commits_history_header" />

        <include layout="@layout/commits_layout" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margins"
        android:layout_marginBottom="44dp"
        android:layout_weight="0.3"
        android:background="@drawable/rounded_corner_background"
        android:drawableStart="@drawable/baseline_launch_black_24"
        android:paddingHorizontal="120dp"
        android:text="@string/share_repo_button"
        android:textSize="18sp" />

</LinearLayout>